--- a/config/README.md.erb
+++ b/config/README.md.erb
@@ -27,4 +27,4 @@ The code used to generate these files lives in the [bounty-targets](https://gith
 
 ### Getting in touch
 
-Feel free to contact me on twitter: https://twitter.com/arkadiyt
+Feel free to contact me on Signal: @arkadiyt.01
